2006-02-26  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* mf/aybabtu.pe.in (i): remove PFAaybabtu generation

	* buildscripts/gen-emmentaler-scripts.py (i): remove PFAemmentaler
	generation

	* scm/framework-ps.scm: remove font name munging.

	* Documentation/topdocs/INSTALL.texi (Top): bump GS requirement.

2006-02-25  Nicolas Sceaux  <nicolas.sceaux@free.fr>

	* scm/markup.scm (define-markup-command): change
	def-markup-command to define-markup-command

	* scm/music-functions.scm (define-music-function): change
	def-music-function to define-music-function.

	* python/convertrules.py (conv): rules for def-music-function
	and def-markup-commands

	* Documentation/user/programming-interface.itely,
	input/no-notation/display-lily-tests.ly,
	input/regression/lily-in-scheme.ly,
	input/regression/markup-user.ly,
	input/regression/music-function.ly, input/regression/tie-chord.ly,
	scm/fret-diagrams.scm, ly/music-functions-init.ly,
	ly/gregorian-init.ly: use new macro names (define-music-function,
	define-markup-command).

2006-02-25  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scripts/lilypond-book.py (main): write Makefile dependencies file. 
	(output): add comments to lp-book latex output.

	* GNUmakefile.in (footifymail): use gmane address for webpage bug
	address.

2006-02-23  Graham Percival  <gpermus@gmail.com>

	* Documentation/user/ tutorial, global: minor changes.

2006-02-23  Nicolas Sceaux  <nicolas.sceaux@free.fr>

	* mf/GNUmakefile: add '\' in multi-line "define ... endef"
	blocks (for make 3.80)

	* scm/parser-ly-from-scheme.scm (ly:parse-string-result): add
	\notemode so that user should not have to explicitely type it.

	* scm/define-music-display-methods.scm: various
	fixes (ApplyOutputEvent, ApplyContext; \new, \context and derived
	constructs)

	* input/no-notation/display-lily-tests.ly: new tests for
	\applyOutput and \applyContext

2006-02-23  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/constrained-breaking.cc: patch by Joe Neeman: "I have